deployment2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-deployment-test
  labels:
    app: pingpongtest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pingpongtest
  template:
    metadata:
      labels:
        app: pingpongtest
    spec:
      containers:
      - name: pingpongtest
        image: midnighthelix/my-private-repo:1.1
        ports: 
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
