ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: example-ingress
spec: 
  rules: 
    - 
      http: 
        paths: 
          - 
            backend: 
              service: 
                name: pingpong-deployment
                port: 
                  number: 8080
            path: /pingpong(/|$)(.*)
            pathType: Prefix
          - 
            backend: 
              service: 
                name: pingpong-deployment-test
                port: 
                  number: 8080
            path: /pingpongtest(/|$)(.*)
            pathType: Prefix
